--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	background-color: #0e0e0e;
+	color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
+
 button {
 	background-color: blueviolet;
 	color: white;
@@ -5,19 +20,4 @@ button {
 	border-radius: 5px;
 	border: none;
 	cursor: pointer;
-}
-.btn__desactive {
-	background-color: rgba(137, 43, 226, 0.527);
-	color: black;
-}
-.container {
-	width: 80%;
-	margin: 0 auto;
-	display: grid;
-	place-items: center;
-}
-table {
-	border: 1px solid black;
-	padding: 10px;
-	width: 100%;
 }
